--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
-<!doctype html>
-<head>
-  <title>Flissel</title>
-  <link rel="stylesheet" href="styles.css" />
-</head>
-<body>
-  <h1 class="title">Flissel</h1>
-</body>
+<! doctype html>
+<html>
+  <head>
+    <title>Flissel</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <h1 class="title">Flissel</h1>
+  </body>
+</html>
