Add buttons for Games, Apps, and Settings

--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
   </head>
   <body>
     <h1 class="title">Flissel</h1>
+    <button>Games</button> <button>Apps</button> <button>Settings</button>
   </body>
 </html>
