Refactor HTML structure and improve semantics

--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
-<! doctype html>
-<html>
+<!    DOCTYPE html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Flissel</title>
     <link rel="stylesheet" href="styles.css" />
+
   </head>
   <body>
-    <h1 class="title">Flissel</h1>
-    <button>Games</button> <button>Apps</button> <button>Settings</button>
+    <div class="container">
+      <h1 class="tit">Flissel</h1>
+      <div class="nav-buttons">
+        <button>Games</button>
+        <button>Apps</button>
+        <button>Settings</button>
+      </div>
+    </div>
   </body>
 </html>
