--- a/404.html
+++ b/404.html
@@ -127,7 +127,7 @@
         <h1>Page Not Found</h1>
         <p>Sorry, the page you're looking for doesn't exist.  It might have been moved or deleted.</p>
         <div class="buttons">
-            <a href="/" class="btn-home">← Back to Home</a> <a href="/games" class="btn-home">Games</a>
+            <a href="/frissel" class="btn-home">← Back to Home</a> <a href="/frissel/games" class="btn-home">Games</a>
         </div>
     </div>
 </body>
