--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
       <h1 class="tit">Flissel</h1>
       <div class="nav-buttons">
-        <button>Games</button>
+        <a href="/Games.html"><button>Games</button></a>
         <button>Apps</button>
         <button>Settings</button>
       </div>
