--- a/games.html
+++ b/games.html
@@ -13,7 +13,7 @@
       <h1 class="tit">Flissel</h1>
       <h1 class="ti">Games</h1>
       <div class="nav-buttons">
-        <button><image class="image" src="https://th.bing.com/th/id/R.b2b0d3f376a7ae503d678b4a4069fc99?rik=4Tv1bZO3CB9vQQ&riu=http%3a%2f%2far-entertainment.net%2fwp%2fwp-content%2fuploads%2f2018%2f11%2f2048-RoundedIcon.png&ehk=MNXSysVtzEv2PdevM9368%2bt2w9hVWCBZFxs5d3H%2bw0A%3d&risl=&pid=ImgRaw&r=0" <><h2 class="game-title">2048</h2></button>
+        <a href="/Flissel/games/2048.html"><button><image class="image" src="https://th.bing.com/th/id/R.b2b0d3f376a7ae503d678b4a4069fc99?rik=4Tv1bZO3CB9vQQ&riu=http%3a%2f%2far-entertainment.net%2fwp%2fwp-content%2fuploads%2f2018%2f11%2f2048-RoundedIcon.png&ehk=MNXSysVtzEv2PdevM9368%2bt2w9hVWCBZFxs5d3H%2bw0A%3d&risl=&pid=ImgRaw&r=0" <><h2 class="game-title">2048</h2></button></a>
 
       </div>
     </div>
