--- a/games/2048.html
+++ b/games/2048.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Flissel</title>
-    <link rel="stylesheet" href="game-styles.css" />
+    <link rel="stylesheet" href="/Flissel/game-styles.css" />
 
   </head>
   <body>
