--- a/games/2048.html
+++ b/games/2048.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Flissel</title>
+    <title>Flissel | 2048</title>
     <link rel="stylesheet" href="styles-gamepage.css" />
 
   </head>
