--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="container">
-      <h1 class="tit">Flissel</h1>
+      <h1 class="tit">🌴 Flissel</h1>
       <div class="nav-buttons">
         <a href="/Flissel/games.html"><button>Games</button></a>
         <button>Apps</button>
