--- a/game:data/2048-Game/2048.html
+++ b/game:data/2048-Game/2048.html
@@ -188,7 +188,7 @@
     <h2>Score: <span id="score">0</span></h2>
     <div id="board"></div>
 
-    <script src="/java-script"></script>
+    <script src="/java-script.js"></script>
 
 </body>
 </html>
