--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <button>Apps</button>
         <button>Settings</button>
         <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="judedudesly" data-description="Support me on Buy me a coffee!" data-message="" data-color="#40DCA5" data-position="Right" data-x_margin="18" data-y_margin="18"></script>
+        <p>fill out the <a>Form</a> to geta ad spot here! (your ad will last for a week)</p>
       </div>
     </div>
   </body>
