--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 
   </head>
   <body>
-    <div class="container">
-      <h1 class="tit">🌴 Flissel</h1>
-      <div class="nav-buttons">
-        <a href="/Flissel/games.html"><button>Games</button></a>
-        <button>Apps</button>
-        <button>Settings</button>
-        <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="judedudesly" data-description="Support me on Buy me a coffee!" data-message="" data-color="#40DCA5" data-position="Right" data-x_margin="18" data-y_margin="18"></script>
-        <h5 class = "ad">fill out the <a class = "ad">Form</a> to geta ad spot here! (your ad will last for a week)</h5>
-      </div>
-    </div>
+  <div class="container">
+  <h1 class="tit">🌴 Flissel</h1>
+  <div class="nav-buttons">
+    <a href="/Flissel/games.html"><button>Games</button></a>
+    <button>Apps</button>
+    <button>Settings</button>
+  </div>
+  <h5 class="ad">fill out the <a class="ad" href="#">Form</a> to get an ad spot here! (your ad will last for a week)</h5>
+  <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="judedudesly" data-description="Support me on Buy me a coffee!" data-message="" data-color="#40DCA5" data-position="Right" data-x_margin="18" data-y_margin="18"></script>
+</div>
   </body>
 </html>
