--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <button>Apps</button>
     <button>Settings</button>
   </div>
-  <h5 class="ad">fill out the<a class="ad" href="/Flissel/404.html">Form</a>to get an ad spot here! (your ad will last for a week)</h5>
+    <a class="ad" href="/Flissel/404.html">Fill out the Form to get an ad spot here! (your ad will last for a week)</a>a
   <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="judedudesly" data-description="Support me on Buy me a coffee!" data-message="" data-color="#40DCA5" data-position="Right" data-x_margin="18" data-y_margin="18"></script>
 </div>
   </body>
