--- a/games.html
+++ b/games.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="container">
-        <a href="/Flissel"><p class="back"><button class="back-button">Back</button></p></a>
+        <a href="/Flissel"><p class="back"><button class="back-button">Back</button></p></a> <a href="/Flissel/Danger/games"><p class="back"><button class="back-button">Danger Zone</button></p></a>
       <h1 class="tit">Flissel</h1>
       <h1 class="ti">Games</h1>
       <div class="nav-buttons">
