--- a/Danger/games.html
+++ b/Danger/games.html
@@ -3,21 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Flissel</title>
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <title>Flissel | Games</title>
+    <link rel="stylesheet" href="game-styles.css" />
 
   </head>
   <body>
-  <div class="container">
-  <h1 class="tit">🌴 Flissel</h1>
-  <div class="nav-buttons">
-    <a href="/Flissel/games.html"><button>Games</button></a>
-    <button>Apps</button>
-    <button>Settings</button>
-  </div>
-    <a class="67" href="/Flissel/404.html">Fill out the Form to get an ad spot here! (your ad will last for a week)</a>
-  <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="judedudesly" data-description="Support me on Buy me a coffee!" data-message="" data-color="#40DCA5" data-position="Right" data-x_margin="18" data-y_margin="18"></script>
-</div>
+    <div class="container">
+        <a href="/Flissel"><p class="back"><button class="back-button">Back</button></p></a> <a href="/Flissel/Danger/games"><p class="back"><button class="Danger-Zone">Danger Zone</button></p></a>
+      <h1 class="tit">Flissel</h1>
+      <h1 class="ti">Games</h1>
+      <div class="nav-buttons">
+        <a href="/Flissel/games/2048.html"><button><image class="image" src="https://th.bing.com/th/id/R.b2b0d3f376a7ae503d678b4a4069fc99?rik=4Tv1bZO3CB9vQQ&riu=http%3a%2f%2far-entertainment.net%2fwp%2fwp-content%2fuploads%2f2018%2f11%2f2048-RoundedIcon.png&ehk=MNXSysVtzEv2PdevM9368%2bt2w9hVWCBZFxs5d3H%2bw0A%3d&risl=&pid=ImgRaw&r=0" <><h2 class="game-title">2048</h2></button></a>
+
+      </div>
+    </div>
   </body>
 </html>
