--- a/Danger/games.html
+++ b/Danger/games.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="container">
-        <a href="/Flissel/Games.html"><p class="back"><button class="back-button">Back</button></p></a>
+        <a href="/Flissel/games.html"><p class="back"><button class="back-button">Back</button></p></a>
       <h1 class="tit">Flissel</h1>
       <h1 class="ti">Danger - Games</h1>
       <div class="nav-buttons">
