--- a/games/danger/Lunaar.html
+++ b/games/danger/Lunaar.html
@@ -11,7 +11,7 @@
     <div class="container">
       <a href="/Flissel/games.html"><p class="back"><button class="back-button">Back</button></p></a>
       <h1 class="tit">Lunaar</h1>
-      <iframe src="/game:data/2048-Game/2048.html" style="height:650px;width:1000px" title="2048"></iframe>
+      <iframe src="https://Lunaar.org" style="height:650px;width:1000px" title="2048"></iframe>
       </div>
     </div>
   </body>
