--- a/games/danger/Lunaar.html
+++ b/games/danger/Lunaar.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Flissel | 2048</title>
-    <link rel="stylesheet" href="/games/danger/styles-gamepage.css" />
+    <link rel="stylesheet" href="/games/styles-gamepage.css" />
 
   </head>
   <body>
