--- a/game:data/2048-Game/2048.html
+++ b/game:data/2048-Game/2048.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>2048</title>
-    <link rel="stylesheet" href="/game:data/2048-Game/style-sheet.css">
+    <link rel="stylesheet" href="/Flissel/game:data/2048-Game/style-sheet.css">
 </head>
 <body>
     <h1>2048</h1>
@@ -12,7 +12,7 @@
     <h2>Score: <span id="score">0</span></h2>
     <div id="board"></div>
 
-    <script src="/game:data/2048-Game/java-script.js"></script>
+    <script src="/Flissel/game:data/2048-Game/java-script.js"></script>
 
 </body>
 </html>
